--- a/src/pages/loginPage/loginPage.css
+++ b/src/pages/loginPage/loginPage.css
@@ -18,6 +18,12 @@
     /* align-items: center; */
 }
 
+.login-image{
+    width: 156px;
+height: 50px;
+flex-shrink: 0;
+}
+
 .login-form{
     border: 1px solid tomato;
     display: flex;
@@ -31,11 +37,15 @@ left: 204px;
 top: calc(50% - 443px/2 - 19px);
 }
 
-input[type="text"],button{
+
+input[type="text"]{
    height:50px;
    width: 410px;
    border-radius: 15px;
-   margin-top:1rem;
+flex-shrink: 0;
+border-radius: 16px;
+border: 1px solid rgba(151, 151, 151, 0.20);
+background-color: rgba(29, 38, 48, 0.20);
 }
 
 button{
@@ -57,6 +67,7 @@ button{
     /* display:flex; */
     width:50%;
 }
+
 .hand-img{
 position: absolute;
 max-width:100%;
@@ -69,10 +80,6 @@ top: 56px;
  drop-shadow:0px 4px 4px rgba(0, 0, 0, 0.25); */
 
 }
-
-
-
-
 
 
 .left-container{
