--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
-body{
+
+/* body{
   overflow: hidden;
   height: 100vh;
   width:100vw;
-}
+} */
 
-.App {
+/* .App {
   text-align: center;
   
-}
+} */
 
 /* .App-header {
   background-color: #282c34;
